--- a/alpine-consul-nginx/root/etc/nginx/conf.d/default.conf
+++ b/alpine-consul-nginx/root/etc/nginx/conf.d/default.conf
@@ -13,3 +13,29 @@ server {
         log_not_found off;
     }
 }
+
+server {  
+    listen 80;
+    server_name example1.com;
+    location / {
+        proxy_pass http://localhost:3030;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+}
+
+server {  
+    listen 80;
+    server_name example2.com;
+    location / {
+        proxy_pass http://localhost:3040;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+}
