--- a/nginx/root/etc/consul/conf.d/nginx.json
+++ b/nginx/root/etc/consul/conf.d/nginx.json
@@ -2,12 +2,18 @@
     "service": {
         "name": "nginx",
         "port": 80,
-        "check": {
-            "id": "nginx",
+        "checks": [{
+            "id": "api",
             "name": "nginx on port 80",
-            "http": "http://localhost/ping",
+            "http": "http://localhost:80/ping",
             "interval": "10s",
             "timeout": "1s"
-        }
+        }, {
+            "id": "websocket-server",
+            "name": "nginx on port 8080",
+            "http": "http://localhost:8080/ping",
+            "interval": "10s",
+            "timeout": "1s"
+        }]
     }
 }
