--- a/nginx/root/etc/nginx/conf.d/default.conf
+++ b/nginx/root/etc/nginx/conf.d/default.conf
@@ -12,13 +12,9 @@ server {
     location /favicon.ico {
         log_not_found off;
     }
-}
 
-server {  
-    listen 80;
-    server_name example1.com;
     location / {
-        proxy_pass http://localhost:3030;
+        proxy_pass http://api.service.consul:3030;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -27,11 +23,21 @@ server {
     }
 }
 
-server {  
-    listen 80;
-    server_name example2.com;
+server {
+    listen 8080;
+    server_name "";
+
+    location /ping {
+        return 200;
+        access_log off;
+    }
+
+    location /favicon.ico {
+        log_not_found off;
+    }
+
     location / {
-        proxy_pass http://localhost:3040;
+        proxy_pass http://websocket-server.service.consul:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
