--- a/nginx/root/etc/consul-template/conf.d/nginx/api.conf
+++ b/nginx/root/etc/consul-template/conf.d/nginx/api.conf
@@ -1,5 +1,5 @@
 template {
     source = "/etc/consul-template/templates/nginx/api.ctmpl"
-    destination = "/etc/nginx/conf.d/default.conf"
+    destination = "/etc/nginx/conf.d/api.conf"
     command = "s6-svc -h /var/run/s6/services/nginx"
 }
