--- a/nginx/root/etc/nginx/nginx.conf
+++ b/nginx/root/etc/nginx/nginx.conf
@@ -1,4 +1,3 @@
-
 user nginx;
 worker_processes 1;
 
@@ -12,6 +11,16 @@ error_log   /var/log/nginx/error.log warn;
 pid         /var/run/nginx.pid;
 
 http {
+
+    # hide nginx version
+    server_tokens off;
+
+    # add nosniff header (https://www.owasp.org/index.php/List_of_useful_HTTP_headers)
+    add_header X-Content-Type-Options nosniff;
+
+    # force Strict transport security (https://bjornjohansen.no/optimizing-https-nginx)
+    add_header Strict-Transport-Security "max-age=31536000" always;
+
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
@@ -28,6 +37,18 @@ http {
 
     gzip on;
 
-    include /etc/nginx/conf.d/*.conf;
+    ssl_certificate /etc/nginx/ssl/server.crt;
+    ssl_certificate_key /etc/nginx/ssl/server.key;
 
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;
+
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+
+    ssl_dhparam /etc/nginx/cert/dhparam.pem;
+
+    include /etc/nginx/conf.d/*.conf;
 }
