--- a/nginx/root/etc/nginx/nginx.conf
+++ b/nginx/root/etc/nginx/nginx.conf
@@ -37,8 +37,8 @@ http {
 
     gzip on;
 
-    ssl_certificate /etc/nginx/ssl/server.crt;
-    ssl_certificate_key /etc/nginx/ssl/server.key;
+    ssl_certificate /etc/nginx/ssl/stemn.crt;
+    ssl_certificate_key /etc/nginx/ssl/stemn.key;
 
     ssl_session_timeout 1d;
     ssl_session_cache shared:SSL:50m;
