--- a/nginx/root/etc/nginx/nginx.conf
+++ b/nginx/root/etc/nginx/nginx.conf
@@ -37,7 +37,7 @@ http {
 
     gzip on;
 
-    ssl_certificate /etc/nginx/ssl/stemn.crt;
+    ssl_certificate /etc/nginx/ssl/stemn.chained.crt;
     ssl_certificate_key /etc/nginx/ssl/stemn.key;
 
     ssl_session_timeout 1d;
